# super_rip

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main  main.c  super_rip.c  super_rip.h
tests/: CMakeLists.txt  test_super_rip  test_super_rip.c
